fix contrast of link text color for WCAG 2.0

--- a/themes/tkmngy/assets/scss/_variable.scss
+++ b/themes/tkmngy/assets/scss/_variable.scss
@@ -9,8 +9,8 @@ $pallet-gray-twilight: hsl(200, 16, 48);
 $pallet-gray-midnight: hsl(200, 16, 32);
 $pallet-black-abyss: hsl(200, 32, 16);
 $pallet-black-hadal: hsl(200, 16, 8);
-$pallet-blue: hsl(200, 56, 40);
-$pallet-lightblue: hsl(200, 56, 64);
+$pallet-blue: hsl(200, 72, 32);
+$pallet-lightblue: hsl(200, 72, 56);
 
 // Ratio
 $ratio: 1.73;
